# rules-go-local-gofumpt

./: .dir-locals.el  MODULE.bazel  README.md  go.mod  gopackagesdriver.sh
subdir/: BUILD.bazel  sub.go
subdir/anothersubofsub/: BUILD.bazel  subofsub.go
subdir/subofsub/: BUILD.bazel  subofsub.go
